src/test/deca/context/invalid/instanceof-undeclaredClass.context
instanceof-undeclaredClass.deca:2:
